<resources>
    <string name="app_name">NOTED</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Your Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="powered_by">Powered By</string>
    <string name="developer_depository">Developer Depository</string>
    <string name="don_t_bother_remembering">Don\'t Bother Remembering!</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color For Note</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="whoa_you_don_t_have_any_saved_notes_yet">You don\'t have any notes in here!</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_voice_note">Add Voice Note</string>
    <string name="select_image">Select Image</string>
    <string name="reading_text">Do you want NOTED to read the note for you?</string>
    <string name="stop_reading">CANCEL</string>
    <string name="start_reading">READ</string>
    <string name="read_note">Read Note</string>
    <string name="rate_dialog_title">How would you rate NOTED?</string>
    <string name="rate_dialog_message">If you like the app &amp; find it useful, would you mind taking a moment to rate it? It won\'t take time. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="share_note">Share Note</string>
    <string name="default_version">Version</string>
    <string name="app_info_copyright">&#xa9; 2020 by Developer Depository</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>