<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AppInfoActivity">

    <ImageButton
        android:id="@+id/app_info_close_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_remove"
        android:scaleType="centerCrop"
        android:tint="@color/colorIcons"
        android:contentDescription="@string/app_name"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="120dp"
        android:scaleType="centerInside"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/don_t_bother_remembering"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <TextView
        android:id="@+id/app_info_version_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/default_version"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/app_slogan"
        app:layout_constraintStart_toStartOf="@+id/app_slogan"
        app:layout_constraintTop_toBottomOf="@+id/app_slogan" />

    <TextView
        android:id="@+id/app_info_copyright"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:includeFontPadding="false"
        android:text="@string/app_info_copyright"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/app_info_version_name"
        app:layout_constraintStart_toStartOf="@+id/app_info_version_name"
        app:layout_constraintTop_toBottomOf="@+id/app_info_version_name" />

    <TextView
        android:id="@+id/app_info_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/privacy_policy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="6dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@+id/app_info_copyright"
        app:layout_constraintStart_toStartOf="@+id/app_info_copyright"
        app:layout_constraintTop_toBottomOf="@+id/app_info_copyright" />

</androidx.constraintlayout.widget.ConstraintLayout>