<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="centerInside"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/app_powered_by1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/don_t_bother_remembering"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <TextView
        android:id="@+id/app_powered_by1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/powered_by"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="normal"
        android:alpha="0.75"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/app_powered_by2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_powered_by2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/developer_depository"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>